--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 08 15:10:33 EST 2016
-ndk.dir=C\:\\Users\\abbf2501\\AppData\\Local\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\abbf2501\\AppData\\Local\\Android\\sdk
+#Tue Mar 01 13:08:43 EST 2016
+sdk.dir=/Users/Maxence/Library/Android/sdk
