--- a/app/local.properties
+++ b/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 02 10:31:24 EST 2016
-sdk.dir=C\:\\Users\\lang2511\\AppData\\Local\\Android\\sdk
+#Thu Mar 03 15:54:22 EST 2016
+sdk.dir=C\:\\Users\\rocj2405\\AppData\\Local\\Android\\sdk
