--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 08 11:19:20 EST 2016
-sdk.dir=C\:\\Users\\lang2511\\AppData\\Local\\Android\\sdk
+#Fri Mar 04 10:28:55 EST 2016
+sdk.dir=/Users/Maxence/Library/Android/sdk
