Ajout de l'activité Information
Ajout d'une activité pour afficher les informations d'un lieu.

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 04 10:28:55 EST 2016
-sdk.dir=/Users/Maxence/Library/Android/sdk
+#Mon Mar 07 16:02:58 EST 2016
+sdk.dir=C\:\\Users\\rocj2405\\AppData\\Local\\Android\\sdk
