--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <activity
             android:name=".Activite_test"
             android:label="@string/title_activity_activite_test"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ParcoursActivity"
             android:label="ParcoursActivity"
@@ -64,5 +64,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.lamas.testdataxml.ParcoursActivity" />
         </activity>
+        <activity
+            android:name=".InformationActivity"
+            android:label="@string/title_activity_information"
+            android:parentActivityName=".LieuxActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.lamas.testdataxml.LieuxActivity" />
+        </activity>
     </application>
+
 </manifest>
