--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,27 +13,23 @@
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".POIDetails"
-            android:label="@string/title_activity_poidetails"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".Configuration2"
+            android:name=".initial_tests.Configuration2"
             android:label="@string/title_activity_configuration2"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Configuration3"
+            android:name=".initial_tests.Configuration3"
             android:label="@string/title_activity_configuration3"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Configuration4"
+            android:name=".initial_tests.Configuration4"
             android:label="@string/title_activity_configuration4"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Configuration5"
+            android:name=".initial_tests.Configuration5"
             android:label="@string/title_activity_configuration5"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Configuration1"
+            android:name=".initial_tests.Configuration1"
             android:label="@string/title_activity_configuration1"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -47,7 +43,7 @@
             android:label="@string/title_activity_activite_test"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ParcoursActivity"
+            android:name=".list_activities.ParcoursActivity"
             android:label="ParcoursActivity"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -56,22 +52,22 @@
                 android:value="com.example.lamas.testdataxml.Activite_test" />
         </activity>
         <activity
-            android:name=".LieuxActivity"
+            android:name=".list_activities.LieuxActivity"
             android:label="LieuxActivity"
-            android:parentActivityName=".ParcoursActivity"
+            android:parentActivityName=".list_activities.ParcoursActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.lamas.testdataxml.ParcoursActivity" />
+                android:value=".list_activities.ParcoursActivity" />
         </activity>
         <activity
-            android:name=".InformationActivity"
+            android:name=".list_activities.InformationActivity"
             android:label="@string/title_activity_information"
-            android:parentActivityName=".LieuxActivity"
+            android:parentActivityName=".list_activities.LieuxActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.lamas.testdataxml.LieuxActivity" />
+                android:value=".list_activities.LieuxActivity" />
         </activity>
     </application>
 
