--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 08 14:08:47 EST 2016
-ndk.dir=C\:\\Users\\abbf2501\\AppData\\Local\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\abbf2501\\AppData\\Local\\Android\\sdk
+#Wed Mar 16 15:14:39 EDT 2016
+sdk.dir=/Users/Maxence/Library/Android/sdk
